--- a/node/package.json
+++ b/node/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/ivy-gmbh/bubble-benchmark#readme",
   "dependencies": {
+    "@bufbuild/protobuf": "^2.2.3",
     "dotenv": "^16.0.3",
     "nice-grpc": "^2.0.1",
     "nice-grpc-server-health": "^2.0.1"
